add partial santa demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,12 @@
   "references": [
     {
       "path": "./libs/engine"
+    },
+    {
+      "path": "./demos/santa-e2e"
+    },
+    {
+      "path": "./demos/santa"
     }
   ]
 }
