--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nx/devkit": "20.7.2",
     "@nx/eslint": "20.7.2",
     "@nx/eslint-plugin": "20.7.2",
     "@nx/js": "20.7.2",
+    "@nx/playwright": "20.7.2",
     "@nx/vite": "20.7.2",
     "@nx/web": "^20.7.2",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -22,11 +25,13 @@
     "@vitest/ui": "^3.0.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-playwright": "^1.6.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.7.2",
     "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
